ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "*.xcggame.com"
    http:
      paths:
      - path: /jenkins
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
    - host: "*.xcggame.com"
    http:
      paths:
      - path: /harbor
        pathType: Prefix
        backend:
          service:
            name: harbor-harbor-core
            port:
              number: 80
